All non-ASCII characters removed. Additional polishing

--- a/README.Rmd
+++ b/README.Rmd
@@ -133,13 +133,13 @@ Currently the functions accept user ID and password consisting of 8~25 alphanume
 
 Provided password is saved in hashed form - using the `scrypt::hashPassword` function.
 
-![register_UI()](https://statismike.github.io/gallery/shiny.reglog/1_register.gif)
+[![Register UI - click for gif!](https://statismike.github.io/gallery/shiny.reglog/1_register.png)](https://statismike.github.io/gallery/shiny.reglog/1_register.gif)
 
 #### 4.1.2. login_UI
 
 The login box contains inputs for user ID and password. After pushing the "Login" button, it check validity of inputs and logins user. Produces modal dialog detailing results.
 
-![login](https://statismike.github.io/gallery/shiny.reglog/2_login.gif)
+[![Login UI  - click for gif!](https://statismike.github.io/gallery/shiny.reglog/2_login.png)](https://statismike.github.io/gallery/shiny.reglog/2_login.gif)
 
 #### 4.1.3. password_reset_UI
 
@@ -149,11 +149,11 @@ The main `div` contains input for User ID. After user inputs their ID, they shou
 
 After they receive reset code, they need to input it in the next inputbox below and push next button. The validity of inputted code in relation to user ID is then checked. If correct, the new modal dialog opens to input the new password.
 
-![password reset UI](https://statismike.github.io/gallery/shiny.reglog/3_reset1.gif)
+[![Reset UI  - click for gif!](https://statismike.github.io/gallery/shiny.reglog/3_reset1.png)](https://statismike.github.io/gallery/shiny.reglog/3_reset1.gif)
 
 The user need to provide new password and repeat it to check for any typos. After pushing the "Confirm new password" button, below input boxes a message is rendered to give feedback to the user - if the password was changed successfully. After that, the user can close modal dialog with "OK" button.
 
-![reset code modal dialog](https://statismike.github.io/gallery/shiny.reglog/4_reset2.gif)
+[![Reset modal dialog - click for gif!](https://statismike.github.io/gallery/shiny.reglog/4_reset2.png)](https://statismike.github.io/gallery/shiny.reglog/4_reset2.gif)
 
 ### 4.2. Server function
 
