--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,11 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-green.svg)](https://lifecycle.r-lib.org/articles/stages.html)
+[![CRAN status](https://www.r-pkg.org/badges/version/shiny.reglog)](https://CRAN.R-project.org/package=shiny.reglog)
+[![CRAN checks](https://cranchecks.info/badges/summary/shiny.reglog)](https://cran.r-project.org/web/checks/check_results_shiny.reglog.html)
+[![](http://cranlogs.r-pkg.org/badges/last-month/shiny.reglog?color=green)](https://cran.r-project.org/package=shiny.reglog)
+[![](http://cranlogs.r-pkg.org/badges/grand-total/shiny.reglog?color=blue)](https://cran.r-project.org/package=shiny.reglog)
+
 <!-- badges: end -->
 
 ## 1. Introduction
@@ -53,8 +58,12 @@ without danger of breaking changes. In the future I plan to widen the usability:
 You can install this version of shiny.reglog from GitHub with:
 
 ```{r installation, eval=FALSE}
-install.packages("devtools")
-devtools::install_github("StatisMike/shiny.reglog")
+# install version 0.2.0.2 from CRAN 
+install.packages("shiny.reglog")
+
+# or install latest version from GitHub
+# install.packages("devtools")
+# devtools::install_github("StatisMike/shiny.reglog")
 ```
 
 ## 3. Setup
