custom handlers vignette update

--- a/vignettes/create_custom_handlers.Rmd
+++ b/vignettes/create_custom_handlers.Rmd
@@ -155,7 +155,7 @@ str(credsEdit_message)
 - *RegLogDBIConnector*: `DBI_resetPass_generation_handler`
 - *RegLogGsheetConnector*: `gsheet_resetPass_generation_handler`
 
-These functions is querying the database to search for the specified username. 
+These functions are querying the database to search for the specified username. 
 After confirming that the specified username exists, it generates and inputs
 reset code that the user can use to generate new password.
 Message structure:
@@ -174,7 +174,7 @@ str(resetPass_generate_message)
 - *RegLogDBIConnector*: `DBI_resetPass_confirmation_handler`
 - *RegLogGsheetConnector*: `gsheet_resetPass_confirmation_handler`
 
-These functions is querying the database to search for the specified username
+These functions are querying the database to search for the specified username
 and confirming that provided reset code is correct. After confirmation, it
 marks the reset code as used and updates password for the user. 
 Message structure:
@@ -192,20 +192,24 @@ str(resetPass_confirm_message)
 
 ## Default handler function for *mailConnectors*
 
-All handlers for *mailConnectors* use the same handler functions:
+All default handlers for *mailConnectors* use the same handler functions:
 
-- *RegLogEmayiliConnector*: `emayili_mail_handler`
-- *RegLogGmailrConnector*: `gmailr_mail_handler`
+- *RegLogEmayiliConnector*: `emayili_reglog_mail_handler`
+- *RegLogGmailrConnector*: `gmailr_reglog_mail_handler`
 
 They send the email to the specified address using subject and html body of the
 email kept in the `mailConnector$mails[[message_type]]` list. They also replace
 all of occurences of *?username?*, *?email?*, *?app_name?*, *?app_address?* and
 *?reset_code?* with respective values received in the *RegLogConnectorMessage*.
 
+Mail creation is chosen from the `mailConnector$mails` public field on the
+basis of the `process` *RegLogConnectorMessage* value.
+
 ```{r mail_reglogconnectormessage}
 resetPass_mail_message <- 
   RegLogConnectorMessage(
-    type = "resetPass_mail",
+    type = "reglog_mail",
+    process = "resetPass",
     username = "Whatever",
     email = "edited@email.com",
     app_name = "RegLog Nice ShinyApp",
@@ -215,5 +219,184 @@ resetPass_mail_message <-
 str(resetPass_mail_message)
 ```
 
-## How to write custom *handler function*
+There are also provided handlers to send custom e-mails to the logged user.
 
+- *RegLogEmayiliConnector*: `emayili_custom_mail_handler`
+- *RegLogGmailrConnector*: `gmailr_custom_mail_handler`
+
+They are sending email to the specified address parsing it from provided
+inside the message *subject* and *body*, providing also an option to send
+an *attachment*. No additional parsing is done there and `process` value there
+is only informative - it is saved into logs and presented in the
+`RegLogServer$mail_message()` field.
+
+```{r custommailmessage}
+message_to_send <- RegLogConnectorMessage(
+    type = "custom_mail",
+    process = "attachment_mail",
+    username = "Whatever",
+    email = "edited@email.com",
+    mail_subject = "Custom message with attachement",
+    mail_body = "<p>This is a custom message send from my App</p>
+                 <p>It is completely optional, but that kind of message can also
+                    contain an attachment!</p>",
+    mail_attachement = "files/myplot.png"
+  )
+```
+
+## How to create custom *handler function*
+
+*Handler function* system of *dbConnectors* and *mailConnectors* allows
+for creating custom logic for communicating with them.
+
+For example purposes the custom action that will be described in this vignette
+will be the process of saving and reading from *googlesheet* based database
+results of simple, 10-item questionnaire: Rosenberg's Self-esteem scale.
+
+### Setup the grounds to store the data
+
+Firstly, we need to create another sheet in the googlesheet that is used
+by the *RegLogGsheetConnector* to store our data. Besides the summed score
+we will also need timestamp and username to read the most recent row for
+the currently logged user.
+
+```{r create_new_sheet, eval=F}
+# create new sheet to the googlesheet
+googlesheets4::write_sheet(
+  ss = gsheet_ss,
+  sheet = "SES_results",
+  # append 0-row data.frame to create the "schema" for the sheet
+  data = data.frame(timestamp = as.character(NA),
+                    user_id = as.character(NA),
+                    score = as.numeric(NA))[-1,]
+)
+```
+
+### Create a handler for writing to database
+
+All handler functions need to take as arguments objects `self`, `private` and
+`message` and return `RegLogConnectorMessage`.
+
+```{r SES_results_write, eval=F}
+write_SES_handler <- function(self, private, message) {
+  
+  googlesheets4::sheet_append(
+    # ID of the connected googlesheet is stored inside private of the
+    # RegLogGsheetConnector
+    ss = private$gsheet_ss,
+    sheet = "SES_results",
+    data = data.frame(
+      # db_timestamp creates nicely formatted and interpretable by most
+      # databases current time
+      timestamp = db_timestamp(),
+      # user ID and score should be received inside received message
+      user_id = message$data$user_id,
+      score = message$data$score
+      ))
+  
+  return(RegLogConnectorMessage(type = "write_SES",
+                                success = TRUE))
+  
+}
+```
+
+### Create a handler for reading from database
+
+As we have now the writing handler ready, we should create a handler to retrieve
+the data in another user session.
+
+```{r SES_results_read, eval=F}
+read_SES_handler <- function(self, private, message) {
+  
+  # read all results
+  SES_results <- googlesheets4::read_sheet(
+    ss = private$gsheet_ss,
+    sheet = "SES_results",
+    col_types = "ccn")
+  
+  # get the lastest result for the current user
+  SES_results <- SES_results |>
+    dplyr::filter(user_id == message$data$user_id) |>
+    dplyr::arrange(dplyr::desc(timestamp)) |>
+    dplyr::slice_head()
+  
+  # return the RegLogConnectorMessage with the score if available
+  if (nrow(SES_results) == 1) {
+    return(RegLogConnectorMessage(type = "read_SES",
+                                  success = TRUE,
+                                  score = SES_results$score))
+  } else {
+    return(RegLogConnectorMessage(type = "read_SES",
+                                  success = FALSE))
+  }
+}
+```
+
+### Have everything in motion
+
+I will present there only code for the server logic, containing all needed
+elements for appending created *custom handlers* and sending the *RegLogConnectorMessages*
+to both write and read data from new sheet.
+
+```{r everything_in_motion, eval=F}
+# create and assign RegLogServer object
+RegLog <- RegLogServer$new(
+  # create googlesheet connector
+  dbConector = RegLogGsheetConnector$new(
+    # provide correct googlesheet ID
+    gsheet_ss = gsheet_ss,
+    # provide handlers in a named list. Names will be used to choose on basis
+    # of received RegLogConnectorMessage which function to use
+    custom_handlers = list(write_SES = write_SES_handler,
+                           read_SES = read_SES_handler)
+  ),
+  # provide some mailConnector with all needed data
+  mailConnector = mailConnector
+)
+
+# create an event to write the data to the database: there actionButton will
+# trigger it
+observeEvent(input$write_ses_result, {
+  
+  # make sure the inputs are provided
+  req(input$SES_1, input$SES_2, input$SES_3, input$SES_4, input$SES_5,
+      input$SES_6, input$SES_7, input$SES_8, input$SES_9, input$SES_10)
+  
+  # get the score by summing all raw scores of items
+  score <- sum(input$SES_1, input$SES_2, input$SES_3, input$SES_4, input$SES_5,
+               input$SES_6, input$SES_7, input$SES_8, input$SES_9, input$SES_10)
+  
+  # send message to the dbConnector's listener
+  RegLog$dbConnector$listener(
+    RegLogConnectorMessage(
+      # specify correct type - the same as the name of the handler
+      type = "write_SES",
+      # get required user ID from the RegLog object
+      user_id = RegLog$user_id(),
+      score = score))
+})
+
+# create an event to read the data from the database: eg. another actionButton
+observeEvent(input$read_last_ses_result, {
+  
+  # send correct message to the dbConnector's listener
+  RegLog$dbConnector$listener(
+    RegLogConnectorMessage(
+      type = "read_SES",
+      user_id = RegLog$user_id())
+  )
+})
+
+# assign the retrieved data: eg. to the reactive
+
+SES_result <- reactive(
+  # retrieved data will be available in `message()` field of RegLog object
+  received_message <- RegLog$message()
+  # make sure to only process correct type of message
+  req(received_message$type == "read_SES")
+
+  if (!is.null(score)) {
+    # get the score if there was any saved in the database
+    received_message$data$score
+  })
+```
